--- a/departamentos.html
+++ b/departamentos.html
@@ -1,1 +1,5 @@
-<table><tr><td>10</td><td>CONTABILIDAD</td><td>SEVILLA</td></tr><tr><td>30</td><td>VENTAS</td><td>BARCELONA</td></tr><tr><td>40</td><td>PRODUCCION</td><td>BILBAO</td></tr><tr><td>25</td><td>Sergio</td><td>Zaragoza</td></tr></table>
+<HTML><head>  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script></head><body><div class="container"><table class="table table-hover"><tr><td>10</td><td>CONTABILIDAD</td><td>SEVILLA</td></tr><tr><td>30</td><td>VENTAS</td><td>BARCELONA</td></tr><tr><td>40</td><td>PRODUCCION</td><td>BILBAO</td></tr><tr><td>25</td><td>Sergio</td><td>Zaragoza</td></tr><tr><td>60</td><td>Carlos</td><td>Dominio</td></tr></table></div></body></html>
